# phcl-terraform

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md
examples/aws-basic/: README.md  aws_basic.py  aws_basic.tf
examples/tfvars-functions/: README.md  tfvars_functions.py  tfvars_functions.tf
phcl/terraform/: __init__.py  dialect.py  expressions.py  nodes.py
tests/: conftest.py  test_nodes.py  test_public_api.py
